apps/pesa-cup/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pesa-frontend
  namespace: pesa-prod
spec:
  hostnames:
    - pesacup.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: pesa-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pesa-backend
  namespace: pesa-prod
spec:
  hostnames:
    - pesacup.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pesa-backend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
